--- a/style.scss
+++ b/style.scss
@@ -49,6 +49,7 @@ $settings-width: 30%;
   align-items: center;
   padding: 0 20px;
   width: $game-width;  
+  height: 180px;
   background-color: $bg-color;
    
   
@@ -116,8 +117,8 @@ $settings-width: 30%;
     button{
     height:100%;
     width: 100%;
-    margin: 50px 50px;
-    margin-top: 50px;
+    //margin: 50px 50px;
+   // margin-top: 50px;
     border-radius: 5px;
     background-color: rgb(247, 102, 102);
     color: #fff;
@@ -148,10 +149,12 @@ $settings-width: 30%;
 /****Styling for the tower grid******///
 
 .grid {
+  --num-rows: 2;
+  --num-cols: 6;
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  //justify-content: center;
+  //align-items: center;
   width: 100%;
   height: 100%;
   border: 1px solid black;
@@ -162,8 +165,6 @@ $settings-width: 30%;
 
   .row {
     display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
 
     &:not(:last-child) {
@@ -172,17 +173,21 @@ $settings-width: 30%;
 
     .field {
       position: relative;
-      width: calc((100% / #{numCols}) - 10px);
-      height: calc((100% / #{numRows}) - 10px);
+      width: calc((100% / var(--num-cols)) - 10px);
+      height: calc((100% / var(--num-rows))+10px /*- 10px*/);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
       border: 1px solid black;
       cursor: pointer;
+      overflow: hidden;
 
       .name {
         margin-top: 2px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
       }
 
       .buy-container {
